# NetworksLab2020HSE

./: LICENSE
individual/: CMakeLists.txt  README.md
individual/app/: Server.cpp
individual/lib/: Compress.cpp  Compress.h  Database.cpp  Database.h  HTTP.cpp  HTTP.h  Server.cpp  Server.h  Session.cpp  Session.h
tcp/: CMakeLists.txt  README.md
tcp/apps/: Client.cpp  Server.cpp
tcp/client/: CMakeLists.txt  main.c
tcp/lib/: Client.cpp  Client.h  Message.cpp  Message.h  Server.cpp  Server.h  Socket.cpp  Socket.h
tcp/server/: CMakeLists.txt  main.c
tcp/test/: Client.cpp  Message.cpp  Socket.cpp
tcp/test/util/: MockSocket.cpp  MockSocket.h
udp/: CMakeLists.txt  README.md
udp/apps/: Client.cpp  Server.cpp
udp/lib/: Client.cpp  Client.h  Packet.cpp  Packet.h  Server.cpp  Server.h  Transport.cpp  Transport.h
udp/test/: Packet.cpp
